# AutoVisualizationForMLTask

./: .gitignore  README.md  app.py  docs.json  main.py  pipeline.py  pyproject.toml  request.py  requirement.txt  requirements.txt  server.py  task_mapping.py
data/: mtc_sample.csv
data/mc/: super_small_data.csv  super_small_data_2.csv
pipeline/: s1.py  s2.py
prompt/: prompt.py
src/app/: crew.py  main.py
template/: tabular.html  zip.html
