[project]
name = "AutoVisualizationForMLTask"
version = "0.1.0"
description = "app using crewAI"
authors = [{ name = "Shiny", email = "shinylatui@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
app = "app.main:run"
run_crew = "app.main:run"
train = "app.main:train"
replay = "app.main:replay"
test = "app.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
